  exploration
- add lex/yacc (generators)

** lib9
- import open.c/_p9dir.c from plan9port which fixed ls/du/tar bugs
  (still some bugs though)
- use nanosecond granularity to new Dir->mtime_ field and fix mk to use this
  new more precise time to avoid useless recompilation
- a few long->int32 in strtod.c (but no impact on principia I think)

** test infra
- multi-arch testing thanks to qemu (see tests/s/mini/, tests/c/mini/)
- docker build and test working for both amd64 and arm64
- more C tests in tests/c/{float,vlong}
- use principia as a big regression test in docker, and use goken to compile
  all of principia including the kernels for the pi and pc targets

** build infra
- support and use "#9/..." paths like in plan9port instead of needing
  special env vars like YACCPAR or RCMAIN (kept for compatibility reasons)
  and pass correct -DGOROOT to goos.c and get9root.c
- started to add GODYNLINK and GOLANG #ifdefs to guard optional
  or golang specific code in the toolchain (defined when building GO/
  but undefined otherwise)
- use gcc -fsigned-char on arm64 to get portable code
- use gcc -fpmath=sse -sse2 on i386 to get portable code and same float behavior
  on 32bits vs 64bits machine

** internals
- convert long -> int32 for 64bits machine and gcc/clang portability
  for 5a_/5c_/5l_, va/vc/vl, ia/ic/il, 7a/7c/7l
  TODO: undo and do the minimum like I did for 5c/8c enough to compile/run
  principia
- convert a few long -> int32 for the kencc imported 5a/5c/6l, 8a/8c/8l
  (but very few; just in cc/bits.c and x.out.h)
- move the different toolchains (ix, vx, ...) in assemblers/, linkers/,
  and compilers/ (and kept the golang-origin one in src/cmd/)

** utilities
- add utilities/calc/hoc from principia useful to compile the principia kernel
- add utilities/kernel/{data2s,ksize}.c useful to compile the principia kernel

* Beta (Q3 2025) (arm64 7a/7c/7l v1, riscv ia/ic/il v0, arm64 linux/macos build, arm32 linux run v0, mk/rc, utilities v0, typesetting v0)
