@@ -2,7 +2,7 @@ TOP=../../..
 <$TOP/mkconfig
 <$TOP/mkfiles/$objtype/mkfile
 
-LIBNAME=libl.a
+LIBNAME=liblex.a
 
 OFILES=\
 	allprint.$O\
