@@ -80,13 +80,3 @@ cputime(void)
 	return ret_val;
 	
 }
-
-int
-fileexists(char *s)
-{
-	uchar dirbuf[400];
-
-	/* it's fine if stat result doesn't fit in dirbuf, since even then the file exists */
-	return stat(s, dirbuf/*, sizeof(dirbuf)*/) >= 0;
-}
-
