@@ -15,15 +15,6 @@ char**	libdir;
 int	nlibdir	= 0;
 static	int	maxlibdir = 0;
 
-int
-fileexists(char *s)
-{
-	uchar dirbuf[400];
-
-	/* it's fine if stat result doesn't fit in dirbuf, since even then the file exists */
-	return stat(s, dirbuf, sizeof(dirbuf)) >= 0;
-}
-
 /*
  *	-H0				no header
  *	-H1 -T0x10005000 -R4		is aif for risc os
