@@ -11,7 +11,6 @@
 #define	LIBNAMELEN	300
 
 void	addlibpath(char*);
-int	fileexists(char*);
 char*	findlib(char*);
 
 typedef	struct	Adr	Adr;
@@ -349,7 +348,6 @@ int32	entryvalue(void);
 void	errorexit(void);
 void	exchange(Prog*);
 void	export(void);
-int	fileexists(char*);
 int	find1(int32, int);
 char*	findlib(char*);
 void	follow(void);
