@@ -54,12 +54,3 @@ setmalloctag(void *v, uint32 pc)
 {
 	USED(v, pc);
 }
-
-int
-fileexists(char *s)
-{
-	uchar dirbuf[400];
-
-	/* it's fine if stat result doesn't fit in dirbuf, since even then the file exists */
-	return stat(s, dirbuf, sizeof(dirbuf)) >= 0;
-}
