@@ -20,17 +20,6 @@ static	int	maxlibdir = 0;
  */
 
 
-
-int
-fileexists(char *s)
-{
-	uchar dirbuf[400];
-
-	/* it's fine if stat result doesn't fit in dirbuf, since even then the file exists */
-	return stat(s, dirbuf, sizeof(dirbuf)) >= 0;
-}
-
-
 void
 usage(void)
 {
